Fix wiki page contents overflow

--- a/src/pages/wiki-page/style.scss
+++ b/src/pages/wiki-page/style.scss
@@ -1226,6 +1226,7 @@ body {
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
+  min-width: 0;
 }
 
 /* === BLOCKQUOTES, HR, CODE BLOCKS === */
